--- a/guinevere3.cabal
+++ b/guinevere3.cabal
@@ -15,7 +15,9 @@ license-file:    LICENSE
   
 common common-options
   build-depends:      base >=4.9 && <5
+  
   default-language:   Haskell2010
+  
   default-extensions: 
         BangPatterns
         ConstraintKinds
@@ -59,7 +61,11 @@ common common-options
         TypeOperators
         UndecidableInstances
         ViewPatterns
+  
   ghc-options:
+      -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
+      -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
+      -fprint-explicit-foralls -fprint-explicit-kinds
 
 executable guinevere3-exe
   import:         common-options
